--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.15",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
