--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL="http://0.0.0.0/" 
+NEXT_PUBLIC_API_URL="http://43.156.38.128:3000" 
 # NEXT_PUBLIC_SECURE_URL="https://secure.example.com"  # 生产环境的安全URL
