--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "1.0.0-alpha.11",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
