--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_URL="http://43.156.38.128:3000" 
-# NEXT_PUBLIC_SECURE_URL="https://secure.example.com"  # 生产环境的安全URL
+# API_URL="http://43.156.38.128:3000"
+#API_URL="https://circlecard.fun" 
+RPC_URL="https://devnet.helius-rpc.com/?api-key=f4c86c47-1d8b-4148-9dc6-d9aa6496f788"
