--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@solana/spl-token": "^0.4.8",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -18,7 +19,10 @@
     "@solana/web3.js": "^1.78.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convict": "^6.2.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
