resolve some conflicts

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_URL="http://43.156.38.128:3000" 
 # NEXT_PUBLIC_SECURE_URL="https://secure.example.com"  # 生产环境的安全URL
+
+DATABASE_URL="postgresql://postgres@127.0.0.1:5432/circle_db?schema=public"
